--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- heropage -->
          <div class="hero_page">
             <h1>Love the Power</h1>
-            <img src="/WEB DESIGN CLASS/images.jfif">
+            <img src="/iphone lined up.jpg">
          </div>
          <!--sec1-->
          <section class="sec3">
